<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/configure_activity_background"
    android:theme="@style/WidgetTheme">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:background="@color/configure_activity_background">

        <TextView
            android:id="@+id/widget_settings_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/widget_settings_title"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_vertical|start"
            android:background="@color/configure_activity_background">
        </TextView>

        <View
            android:id="@+id/title_and_settings_divider"
            android:layout_width="match_parent"
            android:layout_below="@id/widget_settings_title"
            android:layout_height="2dp"
            android:background="@drawable/divider">
        </View>

        <TextView
            android:id="@+id/theme_settings"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/title_and_settings_divider"
            android:text="@string/theme_settings_title"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical|start"
            android:background="@color/configure_activity_background">
        </TextView>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/theme_settings"
            android:background="@color/configure_activity_background">

            <RadioButton
                android:id="@+id/radio_button_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:minHeight="48dp"
                android:text="@string/widget_config_dark_option_text"
                android:textColor="@color/white"
                />

            <RadioButton
                android:id="@+id/radio_button_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:minHeight="48dp"
                android:text="@string/widget_config_light_option_text"
                android:textColor="@color/white"
                />
        </RadioGroup>

        <TextView
            android:id="@+id/lang_settings"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/radio_group"
            android:text="@string/semester_progress_widget_language_settings_title"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical|start"
            android:background="@color/configure_activity_background">
        </TextView>

        <RadioGroup
            android:id="@+id/radio_group_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/lang_settings"
            android:background="@color/configure_activity_background">

            <RadioButton
                android:id="@+id/radio_button_french"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:minHeight="48dp"
                android:text="@string/widget_config_french_option_text"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/radio_button_english"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:minHeight="48dp"
                android:text="@string/widget_config_english_option_text"
                android:textColor="@color/white" />
        </RadioGroup>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widget_config_save_text"
            android:textColor="@color/white"
            android:layout_below="@id/radio_group_lang"
            android:background="@color/ets_dark_red"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</RelativeLayout>
