<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_mode_background">

    <LinearLayout
        android:id="@+id/widget_preview_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/widget_config_widget_previews_text"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_vertical|start">
        </TextView>
        <View
            android:id="@+id/previews_divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/divider"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="Small Widget"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical|start">
        </TextView>
        <FrameLayout
            android:id="@+id/widget_preview_small"
            android:layout_width="100dp"
            android:layout_height="100dp">
        </FrameLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/widget_preview_container"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:id="@+id/widget_settings_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/widget_settings_title"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_vertical|start">
        </TextView>

        <View
            android:id="@+id/title_and_settings_divider"
            android:layout_width="match_parent"
            android:layout_below="@id/widget_settings_title"
            android:layout_height="2dp"
            android:background="@drawable/divider"/>

        <TextView
            android:id="@+id/theme_settings"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/title_and_settings_divider"
            android:text="@string/theme_settings_title"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical|start">
        </TextView>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/theme_settings">

            <RadioButton
                android:id="@+id/radio_button_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/widget_config_dark_option_text"
                android:textColor="@color/white"
                android:buttonTint="@color/white" />

            <RadioButton
                android:id="@+id/radio_button_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/widget_config_light_option_text"
                android:textColor="@color/white"
                android:buttonTint="@color/white" />
        </RadioGroup>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widget_config_save_text"
            android:textColor="@color/white"
            android:layout_below="@id/radio_group"
            android:background="@color/ets_dark_red"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</RelativeLayout>
