<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/semester_progress_small_widget"
    android:background="@android:color/transparent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/widget_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/rounded_square"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:contentDescription="@string/widget_background_card" />

    <TextView
        android:id="@+id/semester_progress_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/semester_progress_title_en"
        android:textColor="@color/white"
        android:background="@android:color/transparent"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_medium"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:paddingTop="8dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/semester_progress_title"
        android:orientation="vertical"
        android:background="@android:color/transparent"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            tools:ignore="UselessParent">

            <ProgressBar
                android:id="@+id/linear_progress"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@android:color/transparent"
                style="?android:attr/progressBarStyleHorizontal"
                android:progressDrawable="@drawable/linear_progress_bar"
                android:progress="50"
                android:max="100" />

            <TextView
                android:id="@+id/progressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/default_progress_percentage"
                android:textColor="@color/white"
                android:background="@android:color/transparent"
                android:textSize="16sp" />

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
